# exptext

./: .gitignore  Cargo.toml  LICENSE  README.md  actors.json  mk-outs.sh  test_actors.json
src/: cli.rs  config.rs  expcommand.rs  experror.rs  explanguage.rs  expmessagespecial.rs  expregex.rs  expspeakertype.rs  exptext.rs  exptextretriever.rs  lib.rs  main.rs
src/db/: brackettype.rs  ctype.rs  db.rs  mod.rs  specialtext.rs
tests/: cli.rs  test_actors.json
tests/expected/: all.f.out  all.fn.out  all.fnsl-e.out  all.fs.out  all.l-e.out  all.n.out  all.nl-e.out  all.ns.out  all.out  all.s.out  m00p0801.txt.f.out  m00p0801.txt.fn.out  m00p0801.txt.fnsl-e.out  m00p0801.txt.fs.out  m00p0801.txt.nl-e.out  m00p0801.txt.ns.out  m00p0801.txt.out  m00p0801.txt.s.out  m01a0208.txt.f.out  m01a0208.txt.fn.out  m01a0208.txt.fnsl-e.out  m01a0208.txt.fs.out  m01a0208.txt.l-e.out  m01a0208.txt.n.out  m01a0208.txt.nl-e.out  m01a0208.txt.ns.out  m01a0208.txt.out  m01a0208.txt.s.out  m04a0101.txt.f.out  m04a0101.txt.fn.out  m04a0101.txt.fnsl-e.out  m04a0101.txt.fs.out  m04a0101.txt.l-e.out  m04a0101.txt.n.out  m04a0101.txt.nl-e.out  m04a0101.txt.ns.out  m04a0101.txt.out  m04a0101.txt.s.out  m12a0102.txt.f.out  m12a0102.txt.fn.out  (+6 more)
tests/input/: m00p0801.txt  m01a0208.txt  m12a0102.txt
tests/inputs/: m00p0801.txt
