[package]
name = "exptext"
version = "0.1.0"
description = "A CLI to retrieve all text from a ExplorerScript file from SkyTemple"
authors = [ "Trio" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
lazy_static = "1.4.0"
lazysort = "0.2.1"
regex = "1"
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
